# EA_PURE_COMPRESSOR

./: .gitignore  CMakeLists.txt  analyze_labels.py  analyze_ui.py  analyze_ui_v2.py  analyze_ui_v3.py  build.bat
.github/workflows/: build-windows.yml
Source/: KnobLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CompressorEngine.cpp  CompressorEngine.h  CoreProtect.cpp  CoreProtect.h  CrystallineSaturation.cpp  CrystallineSaturation.h
installer/mac/: build_installer.sh
installer/mac/Output/: EA_PURE_COMPRESSOR_AU.pkg  EA_PURE_COMPRESSOR_VST3.pkg  distribution.xml
installer/windows/: setup.iss
